bug: 38408 - 'Show images in message body' when done for briefcase files does not show image in body -- - briefcase attachments need to be set *before* calling getMsg() but we cannot do that without having a ZmMailMsg to store it in. Ugh. - also added borders for briefcase list view so it does not jump around when selecting items - and more code cleanup in ZmAttachDialog
http://bugzilla.zimbra.com/show_bug.cgi?id=38408

Copied from Perforce
 Change: 169194

--- a/WebRoot/css/zm.css
+++ b/WebRoot/css/zm.css
@@ -3703,6 +3703,10 @@ HTML>BODY .appt-selected .appt_allday_body
 	color:#FFFFFF;
 }
 
+.ZmAttachDialog-container .ZmBriefcaseItemSmall {
+	border-style:solid; border-width:1px 0px; border-color:@lighten(AppC,60)@
+}
+
 .ZmBriefcaseItemSelected .ZmThumbnailItem {
 	border-color: #316AC5;
 }
